--- a/index.html
+++ b/index.html
@@ -19,75 +19,88 @@
 			</ul>
 		</nav>
 
-		<header>
+		<header class="section-container">
 			<h1>Aisha</h1>
 			<p class="header-description">FULL STACK WEB DEVELOPER</p>
 		</header>
 
 		<div class="vertical-line"></div>
 
-		<p id="aboutSection" class="section-title">ABOUT</p>
-		<div class="description-texts">
-			<p class="about-description">
-				Hi! I am an Electronics Engineer who pursued my passion in Web
-				Development. I have learned the different technologies necessary
-				to build a website through bootcamp training. I build quality
-				websites that doesn't compromise design. I have a drive for
-				innovation and problem-solving.
-			</p>
-			<p class="about-description">
-				Here are some technologies I have worked with:
-			</p>
-		</div>
+		<div class="section-container">
+			<p id="aboutSection" class="section-title">ABOUT</p>
+			<div class="description-texts">
+				<p class="about-description">
+					Hi! I am an Electronics Engineer who pursued my passion in
+					Web Development. I have learned the different technologies
+					necessary to build a website through bootcamp training. I
+					build quality websites that doesn't compromise design. I
+					have a drive for innovation and problem-solving.
+				</p>
+				<p class="about-description">
+					Here are some technologies I have worked with:
+				</p>
+			</div>
 
-		<div class="tech-stack description-texts">
-			<ul>
-				<li>HTML</li>
-				<li>CSS</li>
-				<li>Bootstrap</li>
-			</ul>
-			<ul>
-				<li>JavaScript</li>
-				<li>React.js</li>
-				<li>Node.js</li>
-			</ul>
-			<ul>
-				<li>Express.js</li>
-				<li>MongoDB</li>
-				<li>Mongoose</li>
-			</ul>
-		</div>
-
-		<div class="vertical-line"></div>
-
-		<p id="projectsSection" class="section-title">PROJECTS</p>
-		<p class="project-title">Bookmarked</p>
-		<div class="project-container">
-			<a href="https://bookmarked-ecommerce.vercel.app/" target="_blank"
-				>Visit Website</a
-			>
-			<img clas="project-img" src="./images/project1.jpg" />
+			<div class="tech-stack description-texts">
+				<ul>
+					<li>HTML</li>
+					<li>CSS</li>
+					<li>Bootstrap</li>
+				</ul>
+				<ul>
+					<li>JavaScript</li>
+					<li>React.js</li>
+					<li>Node.js</li>
+				</ul>
+				<ul>
+					<li>Express.js</li>
+					<li>MongoDB</li>
+					<li>Mongoose</li>
+				</ul>
+			</div>
 		</div>
 
 		<div class="vertical-line"></div>
 
-		<p id="contactSection" class="section-title">CONTACT</p>
-		<div class="description-texts">
-			<p>Aisha Baigtu</p>
-			<p>+63 967 628 0448</p>
-			<p>aishabaigtu@gmail.com</p>
-			<div class="contact-icons">
-				<a href="https://github.com/aisha-b" target="_blank"
-					><i class="fab fa-github m-2"></i
-				></a>
+		<div class="section-container">
+			<p id="projectsSection" class="section-title">PROJECTS</p>
+			<p class="project-title">Bookmarked</p>
+			<div class="project-container">
 				<a
-					href="https://www.linkedin.com/in/aisha-baigtu-47374b224/"
+					href="https://bookmarked-ecommerce.vercel.app/"
 					target="_blank"
-					><i class="fab fa-linkedin m-2"></i
-				></a>
-				<a href="https://gitlab.com/aishabaigtu" target="_blank"
-					><i class="fab fa-gitlab m-2"></i
-				></a>
+					>Visit Website</a
+				>
+				<img class="project-img" src="./images/project1.jpg" />
+				<p>
+					An online ecommerce bookstore shop website built with MERN
+					Stack. Registration, Login, Wishlist, Cart, and Checkout
+					Features.
+				</p>
+			</div>
+		</div>
+
+		<div class="vertical-line"></div>
+
+		<div class="section-container">
+			<p id="contactSection" class="section-title">CONTACT</p>
+			<div class="description-texts">
+				<p>Aisha Baigtu</p>
+				<p>+63 967 628 0448</p>
+				<p>aishabaigtu@gmail.com</p>
+				<div class="contact-icons">
+					<a href="https://github.com/aisha-b" target="_blank"
+						><i class="fab fa-github m-2"></i
+					></a>
+					<a
+						href="https://www.linkedin.com/in/aisha-baigtu-47374b224/"
+						target="_blank"
+						><i class="fab fa-linkedin m-2"></i
+					></a>
+					<a href="https://gitlab.com/aishabaigtu" target="_blank"
+						><i class="fab fa-gitlab m-2"></i
+					></a>
+				</div>
 			</div>
 		</div>
 
