Add animation on scroll to certificates

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 				</div>
 				<div class="short-vertical-line"></div>
 				<p class="about-description">Certifications:</p>
-				<div class="certificate-container">
+				<div class="certificate-container" data-aos="fade-down">
 					<a
 						href="https://freecodecamp.org/certification/aishabaigtu/javascript-algorithms-and-data-structures"
 						target="_blank"
@@ -71,14 +71,14 @@
 						Structures</a
 					>
 				</div>
-				<div class="certificate-container">
+				<div class="certificate-container" data-aos="fade-down">
 					<a
 						href="https://freecodecamp.org/certification/aishabaigtu/responsive-web-design"
 						target="_blank"
 						>FreeCodeCamp: Responsive Web Design Structures</a
 					>
 				</div>
-				<div class="certificate-container">
+				<div class="certificate-container" data-aos="fade-down">
 					<a
 						href="https://share.zertify.zuitt.co/certificate/18373d57-3fe8-4d4a-a6f0-e52b481b2a21/"
 						target="_blank"
