Add link to contact email

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 			<div class="description-texts" data-aos="fade-down">
 				<p>Aisha Baigtu</p>
 				<p>+63 967 628 0448</p>
-				<p>aishabaigtu@gmail.com</p>
+				<p><a href="mailto:aishabaigtu@gmail.com">aishabaigtu@gmail.com</a></p>
 				<div class="contact-icons">
 					<a href="https://github.com/aisha-b" target="_blank"
 						><i class="fab fa-github m-2"></i
