--- a/index.html
+++ b/index.html
@@ -156,13 +156,32 @@
 			AOS.init();
 
 			$(document).ready(() => {
-				$("body").mousemove((e) => {
+				// $("body").mousemove((e) => {
+				// 	$(".cursor").css({
+				// 		left: `${e.clientX}px`,
+				// 		top: `${e.clientY}px`,
+				// 	});
+				// });
+
+				let mouseX = 0;
+				let mouseY = 0;
+				let xp = 0;
+				let yp = 0;
+
+				$(document).mousemove(function (e) {
 					$(".cursor").css({
-						left: `${e.clientX}px`,
-						top: `${e.clientY}px`,
+						transform:
+							"translate(" +
+							(e.clientX - 3.25) +
+							"px, " +
+							(e.clientY - 3.25) +
+							"px)",
 					});
+
+					mouseX = e.clientX - 10;
+					mouseY = e.clientY - 10;
 				});
-				
+
 				$(".section-container, footer")
 					.children()
 					.mouseenter(() => {
