Add cursor effects on nav hover

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 					mouseY = e.clientY - 10;
 				});
 
-				$(".section-container, footer")
+				$(".section-container, footer, nav")
 					.children()
 					.mouseenter(() => {
 						$(".cursor").css({
@@ -185,7 +185,7 @@
 						});
 					});
 
-				$(".section-container, footer")
+				$(".section-container, footer, nav")
 					.children()
 					.mouseleave(() => {
 						$(".cursor").css({
