--- a/index.html
+++ b/index.html
@@ -109,6 +109,25 @@
 					</p>
 				</div>
 			</div>
+			<div class="short-vertical-line"></div>
+			<div data-aos="fade-down">
+				<p class="project-title">To Do List</p>
+				<div class="project-container">
+					<a
+						href="https://to-do-list-12282021.herokuapp.com//"
+						target="_blank"
+						>Visit Website</a
+					>
+					<img class="project-img" src="./images/project2.png" />
+					<p>
+						A simple To Do List website built with HTML, CSS,
+						Javascript, Node.js, Express.js, Mongoose, and MongoDB .
+						Google/JWT Authentication, Bycrypt Encryption,
+						Add/Remove Task, Strikethrough Task, and Dark Mode
+						features.
+					</p>
+				</div>
+			</div>
 		</div>
 
 		<div class="vertical-line"></div>
