Modify short vertical line length

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 				<p class="project-title">To Do List</p>
 				<div class="project-container">
 					<a
-						href="https://to-do-list-12282021.herokuapp.com//"
+						href="https://to-do-list-12282021.herokuapp.com/"
 						target="_blank"
 						>Visit Website</a
 					>
