Fix project2 img error

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 						target="_blank"
 						>Visit Website</a
 					>
-					<img class="project-img" src="./images/project2.png" />
+					<img class="project-img" src="./images/project2.PNG" />
 					<p>
 						A simple To Do List website built with HTML, CSS,
 						Javascript, Node.js, Express.js, Mongoose, and MongoDB .
